Fix: Fixed the button spacing in the dev api page

--- a/v2/src/components/Account/style.scss
+++ b/v2/src/components/Account/style.scss
@@ -11,6 +11,12 @@
     width: "100%";
 }
 
+.actionBtnContainer {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
 .manageAdmin-txt {
     width: 50%;
     font-size: 0.875rem !important;
